// Copyright 2020 The LUCI Authors.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//      http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package luci.resultdb.internal.ui;

import "go.chromium.org/luci/resultdb/proto/v1/resultdb.proto";

option go_package = "go.chromium.org/luci/resultdb/internal/proto/ui;uipb";

// Service specific to UIs that present test results.
// Do not use this service without talking to its owners.
// TODO(crbug.com/1186480) Remove after the traffic is fully
// migrated to the public RPC.
service UI {
  // Retrieves test variants from an invocation, recursively.
  // Supports invocation inclusions.
  // For displaying test variants in the UI.
  rpc QueryTestVariants(luci.resultdb.v1.QueryTestVariantsRequest) returns (luci.resultdb.v1.QueryTestVariantsResponse) {};
}
